--- a/style.css
+++ b/style.css
@@ -150,8 +150,9 @@
 }
 .grid{
     margin: 60px;
-    display: grid;
-    grid-template-columns: repeat(3,1fr); 
+    display: flex;
+    padding: 20px;
+    justify-content: center;
     align-items: center;
     width: auto;
 }
@@ -185,6 +186,7 @@ main{
     width: 300px;
     transition: .3s;
     justify-content: space-around;
+    margin: 10px;
 }
 
 .grid > article:hover{
@@ -308,16 +310,17 @@ footer{
 
     }
 
+
+
    
 
     .grid{
         margin: 40px;
-        display: grid;
-        grid-gap: 5px;
-        grid-template-columns: repeat(1,1fr);
+        display: flex;
+        flex-wrap: wrap;
         justify-content: center; 
         align-items: center;
-        width: 50%;
+        
         
      
         
@@ -374,26 +377,45 @@ footer{
 @media only screen and (max-width:700px){
     nav{
         width: 100%;
-        background: linear-gradient(#693aec,#3504bb);
+        background: linear-gradient(#c5b3f5,#9e7cfa);
+       
         position: absolute;
         top:0;
         right: 0;
         z-index: 2;
-        color: #fff;
+        
     }
 
     nav a{
         display: block;
         margin-top: 10px;
         margin-bottom: 10px;
-        color: #fff;
+        color: rgb(73, 9, 250);
     }
+
+    nav a:hover{
+        background: #6C63FF;
+        color: #fff;
+        padding: 10px 20px;
+        margin-left: 200px;
+        border-radius: 30px;
+        width: 40%;
+    }
+    #header nav a:last-child{
+        color: white;
+        background: #6C63FF;
+        padding: 10px 20px;
+        margin-left: 200px;
+        border-radius: 30px;
+        width: 40%;
+    }
+
+    
 
     .grid{
         margin: 40px;
-        display: grid;
-        grid-gap: 5px;
-        grid-template-columns: repeat(1,1fr); 
+        display: flex;
+        flex-wrap: wrap;
         align-items: center;
         width: auto;
         
