--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ main{
     font-size: 16px;
     width: 160px;
     margin-top: 30px;
-    left: 40%;
+    
     
     
 }
@@ -375,14 +375,18 @@ footer{
 }
 
 @media only screen and (max-width:700px){
+
+    #header{
+        margin-bottom: 30px;
+    }
     nav{
         width: 100%;
         background: linear-gradient(#c5b3f5,#9e7cfa);
-       
         position: absolute;
         top:0;
         right: 0;
         z-index: 2;
+        margin-bottom: 10px;
         
     }
 
@@ -469,6 +473,122 @@ footer{
 
     
 }
+
+@media only screen and (max-width: 600px){
+
+    #header{
+        margin-bottom: 30px;
+    }
+
+   
+    nav{
+        width: 100%;
+        background: linear-gradient(#c5b3f5,#9e7cfa);
+        position: absolute;
+        top:0;
+        right: 0;
+        z-index: 2;
+        margin-bottom: 20px;
+        
+    }
+
+    nav a{
+        display: block;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        color: rgb(73, 9, 250);
+    }
+
+    nav a:hover{
+        background: #6C63FF;
+        color: #fff;
+        padding: 10px 20px;
+        margin-left: 200px;
+        border-radius: 30px;
+        width: 40%;
+    }
+    #header nav a:last-child{
+        color: white;
+        background: #6C63FF;
+        padding: 10px 20px;
+        margin-left: 130px;
+        border-radius: 30px;
+        width: 40%;
+    }
+
+    .grid{
+        margin: 40px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        width: auto;
+        
+     
+        
+    }
+
+    .content-container h1{
+        color:#564FCC;
+        font-weight: 200;
+        font-size: 20px;
+        line-height: 0.9em;
+        margin-bottom: 10px;
+        margin-top: 10px;
+    }
+    .content-container p{
+        
+        line-height: 0.9em;
+        margin-bottom: 30px;
+        line-height: 1.8em;
+        font-weight: 400;
+    }
+
+    .title{
+        position: absolute;
+        top: 30%;
+        left: 20%;
+    }
+
+    #overtitle{
+        font-size: 20px;
+        color: #fff;
+        text-align: center;
+        margin: 0;
+    }
+
+    #overbutton{
+        border:none;
+        outline: none;
+        color: #6C63Ff;
+        background-color: #fff;
+        padding:10px 10px;
+        border-radius: 40px;
+        font-size: 12px;
+        width: 140px;
+        margin-top: 10px;
+        justify-content: center;
+        
+        
+    }
+
+    footer{
+        margin-top: 2rem;
+        background:rgb(205, 206, 240);
+        color: rgb(77, 9, 238);
+        text-align: center;
+        padding: 1rem;
+        display: flex;
+        text-align: center;
+        padding-left: 10%;
+        padding-right: 50px;
+        width: auto;
+        
+    }
+
+    
+}
+
+
 
 
 
