--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 700;
     box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
 }
 #header{
     padding: 20px;
@@ -16,38 +18,190 @@
     justify-content: space-evenly;
     align-items: center;
 }
-
-#header #logo{
-    font-style: italic;
-    font-size: 20px;
+nav{
+    background: #9975f3;
+    height: 80px;
+    width: 100%;
 }
 
-#header #logo span{
-    color: #564FCC;
-}
-
-#header nav{
-    color:rgb(3, 39, 27);
-}
-
-#header nav a{
-    font-size: 14px;
-    text-decoration: none;
-    padding: 10px;
-    text-align: center;
-    color: black;
-}
-#header nav a:last-child{
+label.logo{
     color: white;
-    background: #6C63FF;
-    padding: 10px 20px;
-    margin-left: 30px;
-    border-radius: 30px;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
+}
+nav ul{
+    float: right;
+    margin-right: 20px;
 }
 
-#header nav a:hover{
-    opacity: 0.9;
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
 }
+nav ul li a{
+    color: rgb(244, 248, 248);
+    font-size: 17px;
+    text-transform: uppercase;
+    padding: 7px 13px;
+    border-radius: 3px;
+    
+}
+
+a:hover{
+    background: #c0e0f8;
+    transition: .5s;
+}
+
+.checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+#check{
+    display: none;
+
+}
+
+@media (max-width:952px) {
+    label.logo{
+        font-size: 30px;
+        padding-left: 50px;
+    }
+
+    nav ul li a{
+        font-size: 16px;
+    }
+    
+}
+
+@media(max-width:858px){
+    .checkbtn{
+        display: block;
+
+    }
+
+    ul{
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top:80px;
+        left: -100%;
+
+        text-align: center;
+        transition: all .5s;
+    }
+
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+
+    }
+
+    nav ul li a{
+        font-size: 20px;
+    }
+
+    a:hover{
+        background: none;
+        color: #0082e6;
+    }
+
+    #check:checked ~ ul{
+        left: 0;
+    }
+
+}
+
+    @media(max-width:700px){
+        .checkbtn{
+            display: block;
+    
+        }
+    
+        ul{
+            position: absolute;
+            width: 100%;
+            height: vh;
+            background: #2c3e50;
+            top:80px;
+            left: -100%;
+    
+            text-align: center;
+            transition: all .5s;
+        }
+    
+        nav ul li{
+            display: block;
+            margin: 50px 0;
+            line-height: 30px;
+    
+        }
+        nav ul li a{
+            font-size: 20px;
+        }
+    
+        a:hover{
+            background: none;
+            color: #0082e6;
+        }
+    
+        #check:checked ~ ul{
+            left: 0;
+        }
+    }
+
+    @media(max-width:600px){
+        .checkbtn{
+            display: block;
+    
+        }
+    
+        ul{
+            position: absolute;
+            width: 100%;
+            height: 50vh;
+            background: #2c3e50;
+            top:80px;
+            left: -100%;
+    
+            text-align: center;
+            transition: all .5s;
+        }
+    
+        nav ul li{
+            display: block;
+            margin: 50px 0;
+            line-height: 30px;
+    
+        }
+        nav ul li a{
+            font-size: 20px;
+        }
+    
+        a:hover{
+            background: none;
+            color: #0082e6;
+        }
+    
+        #check:checked ~ ul{
+            left: 0;
+        }
+    }
+
+
+
+
+
 
 #container{
     overflow: hidden;
@@ -379,42 +533,10 @@ footer{
     #header{
         margin-bottom: 30px;
     }
-    nav{
-        width: 100%;
-        background: linear-gradient(#c5b3f5,#9e7cfa);
-        position: absolute;
-        top:0;
-        right: 0;
-        z-index: 2;
-        margin-bottom: 10px;
-        
-    }
-
-    nav a{
-        display: block;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        color: rgb(73, 9, 250);
-    }
-
-    nav a:hover{
-        background: #6C63FF;
-        color: #fff;
-        padding: 10px 20px;
-        margin-left: 200px;
-        border-radius: 30px;
-        width: 40%;
-    }
-    #header nav a:last-child{
-        color: white;
-        background: #6C63FF;
-        padding: 10px 20px;
-        margin-left: 200px;
-        border-radius: 30px;
-        width: 40%;
-    }
-
     
+    
+
+  
 
     .grid{
         margin: 40px;
@@ -481,40 +603,6 @@ footer{
     }
 
    
-    nav{
-        width: 100%;
-        background: linear-gradient(#c5b3f5,#9e7cfa);
-        position: absolute;
-        top:0;
-        right: 0;
-        z-index: 2;
-        margin-bottom: 20px;
-        
-    }
-
-    nav a{
-        display: block;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        color: rgb(73, 9, 250);
-    }
-
-    nav a:hover{
-        background: #6C63FF;
-        color: #fff;
-        padding: 10px 20px;
-        margin-left: 200px;
-        border-radius: 30px;
-        width: 40%;
-    }
-    #header nav a:last-child{
-        color: white;
-        background: #6C63FF;
-        padding: 10px 20px;
-        margin-left: 130px;
-        border-radius: 30px;
-        width: 40%;
-    }
 
     .grid{
         margin: 40px;
